# Arbitrium

./: .env  Cargo.toml  arbitrium-2025-07-19.surql  env
db_instance/: 000009.blob  000014.sst  000031.blob  000036.sst  IDENTITY  MANIFEST-000011  MANIFEST-000033  OPTIONS-000026
src/: main.rs
src/analysis/: hmm.rs  hmm_custom.rs  mod.rs  moving_average.rs  normalization.rs  sma.rs  volatility.rs
src/analysis/features/: featureset.rs  mod.rs
src/analysis/models/: xgboost.rs
src/analysis/strategies/: gradient_trees.rs  mod.rs  xgboost.rs
src/data/: collection.rs  db_service.rs  mod.rs  realtime_data.rs  types.rs
src/ui/: mod.rs  renderer.rs  widgets.rs
