[package]
name = "arbitrium"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.4"
dotenv = "0.15.0"
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = {version = "*", features = ["datepicker"]}
egui_plot = "0.32.1"
futures = "0.3.31"
futures-util = "0.3.31"
gbdt = "0.1.3"
# hmmm = "0.2.0"
lazy_static = "1.5.0"
linfa = "0.7.1"
linfa-clustering = "0.7.1"
ndarray = "^0.16.1"
# ndarray = "0.13.1"
rand = "0.9.1"
rand_distr = "0.5.1"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
surrealdb = "2.3.5"
tokio = { version = "1.45.1", features = ["full", "macros", "rt-multi-thread"] }
tokio-tungstenite = {version = "0.27.0", features = ["native-tls"]}
# tradingview-rs = { git = "https://github.com/bitbytelabio/tradingview-rs.git", branch = "main" }
