[package]
name = "arbitrium"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.4"
dotenv = "0.15.0"
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = {version = "^0.31.1", features = ["datepicker"]}
egui_plot = "^0.32.1"
futures = "0.3.31"
futures-util = "0.3.31"
holiday = "0.1.2"
# gbdt = "0.1.3"
# hmmm = "0.2.0"
lazy_static = "1.5.0"
linfa = { git = "https://github.com/rust-ml/linfa.git", branch = "master" }
linfa-clustering = { git = "https://github.com/rust-ml/linfa.git", branch = "master" }
linfa-trees = { git = "https://github.com/rust-ml/linfa.git", branch = "master" }
linfa-ensemble = { git = "https://github.com/rust-ml/linfa.git", branch = "master" }
ndarray = "^0.15.0"
# ndarray = "0.13.1"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
surrealdb = {version = "2.3.5", features = ["kv-rocksdb"]}
tokio = { version = "1.45.1", features = ["full", "macros", "rt-multi-thread"] }
tokio-tungstenite = {version = "0.27.0", features = ["native-tls"]}
rand = "0.8.5"
# tradingview-rs = { git = "https://github.com/bitbytelabio/tradingview-rs.git", branch = "main" }
